openshift.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: spring-web-openshift
    name: spring-web-openshift
  spec: {}
  status:
    dockerImageRepository: ""

- apiVersion: v1
  kind: BuildConfig
  metadata:
    name: spring-web-openshift
    namespace: tests-utils
    labels:
      app: spring-web-openshift
  spec:
    triggers:
      - type: Generic
        generic:
          secret: 2dceede7abfb48e4
      - type: ImageChange
      - type: ConfigChange
    runPolicy: Serial
    source:
      type: Git
      git:
        uri: 'git@git.sicredi.net:treinamento/spring-web-openshift.git'
        ref: master
      sourceSecret:
        name: rural-cer
    strategy:
      type: Source
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: 's2i-java:1.8-gradle'
    output:
      to:
        kind: ImageStreamTag
        name: 'spring-web-openshift:latest'

- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    labels:
      app: spring-web-openshift
    name: spring-web-openshift
  spec:
    replicas: 1
    selector:
      app: spring-web-openshift
      deploymentconfig: spring-web-openshift
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: spring-web-openshift
          deploymentconfig: spring-web-openshift
      spec:
        containers:
        - image: spring-web-openshift:latest
          name: spring-web-openshift
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-web-openshift
        from:
          kind: ImageStreamTag
          name: spring-web-openshift:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0

- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: spring-web-openshift
    name: spring-web-openshift
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: spring-web-openshift
      deploymentconfig: spring-web-openshift
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    name: spring-web-openshift
  spec:
    host: spring-web-openshift-tests.domain.net
    port:
      targetPort: 8091-tcp
    to:
      kind: Service
      name: spring-web-openshift

kind: List
metadata: {}
